--- a/app/src/main/res/navigation/nav_four.xml
+++ b/app/src/main/res/navigation/nav_four.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_four">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_four"
+    app:startDestination="@id/fourOneFragment">
+    <fragment
+        android:id="@+id/fourOneFragment"
+        android:name="com.lanic.navigationsample.FourOneFragment"
+        android:label="FourOneFragment" />
 </navigation>
